--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.9",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.9",
+    "lottie-react": "^2.4.0",
     "@mui/x-date-pickers-pro": "^7.2.0",
     "@mui/x-charts": "^7.5.0",
     "@reduxjs/toolkit": "^2.1.0",
