--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "@mui/icons-material": "^5.15.9",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.9",
-    "lottie-react": "^2.4.0",
-    "@mui/x-date-pickers-pro": "^7.2.0",
     "@mui/x-charts": "^7.5.0",
+    "@mui/x-date-pickers-pro": "^7.2.0",
     "@reduxjs/toolkit": "^2.1.0",
     "@types/date-fns": "^2.6.0",
     "@types/datejs": "^0.0.36",
@@ -28,6 +27,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "i18next": "^23.9.0",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
@@ -36,7 +36,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@testing-library/react": "^12.1.4",
@@ -44,6 +45,7 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@types/react-slick": "^0.23.13",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
