--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@hookform/devtools": "^4.3.1",
     "@mui/icons-material": "^5.15.9",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.9",
