--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mui/styles": "^5.16.5",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@hookform/devtools": "^4.3.1",
     "@mui/icons-material": "^5.15.9",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.9",
+    "@mui/styles": "^5.16.5",
     "@mui/x-charts": "^7.5.0",
     "@mui/x-date-pickers-pro": "^7.2.0",
     "@reduxjs/toolkit": "^2.1.0",
@@ -25,6 +25,7 @@
     "@types/i18next": "^13.0.0",
     "@types/node": "^20.12.4",
     "async-mutex": "^0.5.0",
+    "axios": "^1.7.3",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
